--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <section>
           <h2>Welcome</h2>
           <p>
-            <img
+            <img class="test"
               src="images/dishOne.jpg"
               alt="Big Dish"
               width="900"
@@ -63,7 +63,7 @@
           <p><img src="images/square200px.png" alt="Profile Picture" /></p>
           <h2>Contact Details</h2>
           <address>My Address</address>
-          <p>
+          <p class="sidebar">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
             ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
